--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
 
 env:
-  NODE_VERSION: '18'
+  NODE_VERSION: '20'
   FILENAME: "${{ github.sha }}-${{ github.run_id }}"
 
 jobs:
@@ -75,7 +75,7 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
           script: |
-            sudo tar -xzf /tmp/${{ env.FILENAME }}.tar.gz -C /var/www/
+            sudo tar -xzf /tmp/${{ env.FILENAME }}.tar.gz -C /var/www/mywebsite/
             sudo rm /tmp/${{ env.FILENAME }}.tar.gz
             sudo systemctl restart nginx
 
