--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -10,7 +10,7 @@ on:
 
 env:
   NODE_VERSION: '20'
-  FILENAME: "${{ github.sha }}-${{ github.run_id }}"
+  FILENAME: "deploy"
 
 jobs:
   CI:
@@ -29,6 +29,7 @@ jobs:
 
       - name: 📦 Install dependencies
         run: npm install
+        run: npm audit fix
 
       - name: ✅ Run tests
         run: npm test
