Run CI/CD Pipeline

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,8 +28,9 @@ jobs:
           cache: npm
 
       - name: 📦 Install dependencies
-        run: npm install
-        run: npm audit fix
+	    run: |
+          npm install
+          npm audit fix
 
       - name: ✅ Run tests
         run: npm test
