--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,9 +27,7 @@ jobs:
           cache: npm
 
       - name: 📦 Install dependencies
-        run: |
-          npm install
-          npm audit fix --force
+        run: npm install
 
       - name: ✅ Run tests
         run: npm test
