--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -56,6 +56,15 @@ jobs:
           name: build-artifact
           path: .
 
+      - name: 🔍 Debug SSH secrets (length check only)
+        run: |
+          echo "Host: ${{ secrets.SSH_HOST }}"
+          echo "User: ${{ secrets.SSH_USER }}"
+          echo "Port: ${{ secrets.SSH_PORT }}"
+          echo "Key length: ${#SSH_KEY}"
+        env:
+          SSH_KEY: ${{ secrets.SSH_KEY }}
+
       - name: 📤 Copy files via SSH
         uses: appleboy/scp-action@master
         with:
