--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -48,6 +48,7 @@ jobs:
     name: 🚀 Deploy to AWS
     runs-on: ubuntu-latest
     needs: [CI]
+    environment: aws-dipti
 
     steps:
       - name: ⬇️ Download Build Artifact
