Run CI/CD pipeline

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -36,7 +36,7 @@ jobs:
         run: npm run build
 
       - name: 📦 Archive build
-        run: tar -czf ${{ env.FILENAME }}.tar.gz ./build
+        run: tar -czf ${{ env.FILENAME }}.tar.gz -C build .
 
       - name: ⬆️ Upload Build Artifact
         uses: actions/upload-artifact@v4
@@ -57,15 +57,6 @@ jobs:
           name: build-artifact
           path: .
 
-      - name: 🔍 Debug SSH secrets (length check only)
-        run: |
-          echo "Host: ${{ secrets.SSH_HOST }}"
-          echo "User: ${{ secrets.SSH_USER }}"
-          echo "Port: ${{ secrets.SSH_PORT }}"
-          echo "Key length: ${#SSH_KEY}"
-        env:
-          SSH_KEY: ${{ secrets.SSH_KEY }}
-
       - name: 📤 Copy files via SSH
         uses: appleboy/scp-action@master
         with:
@@ -84,6 +75,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT }}
           script: |
+            sudo rm -rf /var/www/mywebsite/*   
             sudo tar -xzf /tmp/${{ env.FILENAME }}.tar.gz -C /var/www/mywebsite/
             sudo rm /tmp/${{ env.FILENAME }}.tar.gz
             sudo systemctl restart nginx
